Symbaroum v.2.12: minor pug/html fixes, update version number

--- a/Symbaroum/src/pug/oldsymbaroum.html
+++ b/Symbaroum/src/pug/oldsymbaroum.html
@@ -10,7 +10,7 @@ New Roll Template styles
 "Permanent bonus" to attack and defense section
 Advantage button - auto calculate +2atk and 1d4dmg
 Concentration check    
-******************************************
+****************************************** -->
 
 <!-- *******  PAGE 3 -->
 <div class="sheet-section sheet-section-pc3">   
@@ -81,7 +81,7 @@ Concentration check
                 <label class="sheet-label-large" data-i18n="mystical-powers">Mystical Powers</label> 
                 <div class="sheet-ability-section">
                     <div>
-                        <input type="text" name="attr_powername" title="Power"s name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
+                        <input type="text" name="attr_powername" title="Power's name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
                     </div>
                     <div>
                         <button type="roll" title="Mystical Power Check" data-i18n-title="title-mystical-power-check" class="sheet-hidden sheet-roll" value="&{template:powercheck}{{name=^{power}: @{powername}}} {{character=@{character-name}}} {{selected=@{powerattribute}}} {{attribute=[[@{powerattribute}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}} " name="roll_PowerCheck"></button>
@@ -113,7 +113,7 @@ Concentration check
                 <fieldset class="repeating_power">
                 <div class="sheet-ability-section">
                     <div>
-                        <input type="text" name="attr_powername" title="Power"s name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
+                        <input type="text" name="attr_powername" title="Power's name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
                     </div>
                     <div>
                         <button type="roll" title="Mystical Power Check" data-i18n-title="title-mystical-power-check" class="sheet-hidden sheet-roll" value="&{template:powercheck}{{name=^{power}: @{powername}}} {{character=@{character-name}}} {{selected=@{powerattribute}}} {{attribute=[[@{powerattribute}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}} " name="roll_PowerCheck"></button>
