--- a/Symbaroum/symbaroum.html
+++ b/Symbaroum/symbaroum.html
@@ -89,13 +89,13 @@
         <option value="d12" selectedDie="selectedDie">d12</option>
       </optgroup>
     </select>
-    <label class="center" ata-i18n-title="corruption input" title="corruption input">
+    <label class="center" data-i18n-title="corruption input" title="corruption input">
       <input class="center" name="attr_corruption" min="0" title="@{corruption}" type="number" value="0"/>
     </label><span class="center" data-i18n="temporary-abbrv">Temp.</span>
-    <label class="center" ata-i18n-title="permanent corruption input" title="permanent corruption input">
+    <label class="center" data-i18n-title="permanent corruption input" title="permanent corruption input">
       <input class="center" name="attr_corruption_permanent" min="0" title="@{corruption_permanent}" type="number" value="0"/>
     </label><span class="center" data-i18n="permanent-abbrv">Perm.</span>
-    <label class="center" ata-i18n-title="corruption threshold" title="corruption threshold">
+    <label class="center" data-i18n-title="corruption threshold" title="corruption threshold">
       <input class="center" name="attr_corruption_threshold" title="@{corruption_threshold}" type="number" value="ceil(@{resolute}/2)" disabled="true"/>
     </label><span class="center" data-i18n="threshold">Threshold</span>
   </div>
@@ -631,7 +631,7 @@ New Roll Template styles
 "Permanent bonus" to attack and defense section
 Advantage button - auto calculate +2atk and 1d4dmg
 Concentration check    
-******************************************
+****************************************** -->
 
 <!-- *******  PAGE 3 -->
 <div class="sheet-section sheet-section-pc3">   
@@ -702,7 +702,7 @@ Concentration check
                 <label class="sheet-label-large" data-i18n="mystical-powers">Mystical Powers</label> 
                 <div class="sheet-ability-section">
                     <div>
-                        <input type="text" name="attr_powername" title="Power"s name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
+                        <input type="text" name="attr_powername" title="Power's name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
                     </div>
                     <div>
                         <button type="roll" title="Mystical Power Check" data-i18n-title="title-mystical-power-check" class="sheet-hidden sheet-roll" value="&{template:powercheck}{{name=^{power}: @{powername}}} {{character=@{character-name}}} {{selected=@{powerattribute}}} {{attribute=[[@{powerattribute}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}} " name="roll_PowerCheck"></button>
@@ -734,7 +734,7 @@ Concentration check
                 <fieldset class="repeating_power">
                 <div class="sheet-ability-section">
                     <div>
-                        <input type="text" name="attr_powername" title="Power"s name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
+                        <input type="text" name="attr_powername" title="Power's name" data-i18n-title="title-powers-name" placeholder="Name" data-i18n-placeholder="name" /> 
                     </div>
                     <div>
                         <button type="roll" title="Mystical Power Check" data-i18n-title="title-mystical-power-check" class="sheet-hidden sheet-roll" value="&{template:powercheck}{{name=^{power}: @{powername}}} {{character=@{character-name}}} {{selected=@{powerattribute}}} {{attribute=[[@{powerattribute}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}} " name="roll_PowerCheck"></button>
@@ -857,12 +857,12 @@ Concentration check
                 <div class="sheet-ability-section">
                     <label class="sheet-label-large" data-i18n="character-background">Character Background</label>
                     <textarea name="attr_background" data-i18n-title="character-background" title="Explain where your character comes from and where he or she wants to go and accomplish." placeholder="Explain where your character comes from and where he or she wants to go and accomplish." data-i18n-placeholder="character-background"></textarea>
-                    <textarea name="attr_character_goal"style="height:3.5em;" title="Character Goal" data-i18n-title="character-goal" placeholder="Character Goal" data-i18n-placeholder="character-goal"></textarea>
+                    <textarea name="attr_character_goal" style="height:3.5em;" title="Character Goal" data-i18n-title="character-goal" placeholder="Character Goal" data-i18n-placeholder="character-goal"></textarea>
                 </div>
                 <div class="sheet-ability-section">
                     <label class="sheet-label-large" data-i18n="group">Group</label>
                     <input type="text" name="attr_groupName" title="Group Name" data-i18n-title="group-name" placeholder="Group Name" data-i18n-placeholder="group-name" />
-                    <textarea name="attr_groupGoal"style="height:3.5em;" title="Group Goal" data-i18n-title="group-goal" placeholder="Group Goal" data-i18n-placeholder="group-goal"></textarea>
+                    <textarea name="attr_groupGoal" style="height:3.5em;" title="Group Goal" data-i18n-title="group-goal" placeholder="Group Goal" data-i18n-placeholder="group-goal"></textarea>
                 </div>
                 <div class="sheet-ability-section">
                     <label class="sheet-label-large" data-i18n="friends">Friends</label>
@@ -1094,6 +1094,6 @@ on("change:recalc1",function() {Sheet.checkForUpdate();});
 
 </script>
 </div><!-- ADDED sheet_version. Used to establish sheet changes -->
-<span style="font-size: 12px;float: right;clear: both;margin-top: -.5em;">v<input name="attr_sheet_version" type="text" value="2" style="font-size: 12px;width: 3em;height: 1.5em; vertical-align: text-bottom;" readonly /></span>
+<span style="font-size: 12px;float: right;clear: both;margin-top: -.5em;">Sheet Version: <input name="attr_sheet_version" type="text" value="2.12" style="font-size: 12px;width: 3em;height: 1.5em; vertical-align: text-bottom;" readonly /></span>
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
-<input name="attr_recalc1" type="checkbox" title="RECALC" style="display:none;">sheet_version
+<input name="attr_recalc1" type="checkbox" title="RECALC" style="display:none;">
