refactor NPC in progress

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1915,7 +1915,6 @@
     <input name="attr_stats_toggle" type="checkbox" value="settings" checked="checked"/><span class="pictos">y</span>
   </div>
   <input name="attr_stats_toggle" type="hidden" value="settings"/>
-  <input class="npc-type" name="attr_sheet_type" type="hidden" value="grunt"/>
   <div class="grunt attribute">
     <input class="character-type" name="attr_flag_special" type="hidden"/>
     <button data-i18n="b" name="body" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{body}}}{{base=^{base}}}{{dice=[[((@{body}+@{attribute_roll})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">b</button><span name="attr_display_body"></span>
@@ -1996,28 +1995,94 @@
     </label>
   </div>
   <div class="host attribute">
-    <button data-i18n="host_rating" name="host_rating" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{host_rating}}}{{base=^{host_rating} ♦ ^{host_rating}}}{{dice=[[((@{host_rating}+@{host_rating})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">host_rating</button><span name="attr_host_rating"></span>
-    <label class="settings" data-i18n-title="host_rating" title="Host Rating">Host Rating
+    <button data-i18n="host_rating" name="host_rating" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{host_rating}}}{{base=^{host_rating}}}{{dice=[[((@{host_rating}+@{host_rating})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">host_rating</button><span name="attr_host_rating"></span>
+    <label class="settings" data-i18n-title="host_rating" title="Host Rating">
       <input name="attr_host_rating" placeholder="5" title="@{host_rating}" type="number" value=""/>
     </label>
-    <button data-i18n="attack" name="attack" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{attack}}}{{base=^{host_rating} ♦ ^{attack}}}{{dice=[[((@{host_rating}+@{attack})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">attack</button><span name="attr_attack"></span>
-    <label class="settings" data-i18n-title="attack" title="Attack">Attack
+    <button data-i18n="attack" name="attack" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{attack}}}{{base=^{host_rating}}}{{dice=[[((@{host_rating}+@{attack})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">attack</button><span name="attr_attack"></span>
+    <label class="settings" data-i18n-title="attack" title="Attack">
       <input name="attr_attack" placeholder="5" title="@{attack}" type="number" value=""/>
     </label>
-    <button data-i18n="sleaze" name="sleaze" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{sleaze}}}{{base=^{host_rating} ♦ ^{sleaze}}}{{dice=[[((@{host_rating}+@{sleaze})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">sleaze</button><span name="attr_sleaze"></span>
-    <label class="settings" data-i18n-title="sleaze" title="Sleaze">Sleaze
+    <button data-i18n="sleaze" name="sleaze" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{sleaze}}}{{base=^{host_rating}}}{{dice=[[((@{host_rating}+@{sleaze})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">sleaze</button><span name="attr_sleaze"></span>
+    <label class="settings" data-i18n-title="sleaze" title="Sleaze">
       <input name="attr_sleaze" placeholder="6" title="@{sleaze}" type="number" value=""/>
     </label>
-    <button data-i18n="data_processing" name="data_processing" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{data_processing}}}{{base=^{host_rating} ♦ ^{data_processing}}}{{dice=[[((@{host_rating}+@{data_processing})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">data_processing</button><span name="attr_data_processing"></span>
-    <label class="settings" data-i18n-title="data_processing" title="Data Processing">Data Processing
+    <button data-i18n="data_processing" name="data_processing" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{data_processing}}}{{base=^{host_rating}}}{{dice=[[((@{host_rating}+@{data_processing})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">data_processing</button><span name="attr_data_processing"></span>
+    <label class="settings" data-i18n-title="data_processing" title="Data Processing">
       <input name="attr_data_processing" placeholder="7" title="@{data_processing}" type="number" value=""/>
     </label>
-    <button data-i18n="firewall" name="firewall" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{firewall}}}{{base=^{host_rating} ♦ ^{firewall}}}{{dice=[[((@{host_rating}+@{firewall})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">firewall</button><span name="attr_firewall"></span>
-    <label class="settings" data-i18n-title="firewall" title="Firewall">Firewall
+    <button data-i18n="firewall" name="firewall" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{firewall}}}{{base=^{host_rating}}}{{dice=[[((@{host_rating}+@{firewall})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">firewall</button><span name="attr_firewall"></span>
+    <label class="settings" data-i18n-title="firewall" title="Firewall">
       <input name="attr_firewall" placeholder="8" title="@{firewall}" type="number" value=""/>
     </label>
   </div>
-  <div class="vehicle attribute"></div>
+  <div class="vehicle attribute">
+    <h1 data-i18n="hand">Hand</h1><span name="attr_handling"></span>
+    <label class="settings" data-i18n-title="hand" title="Hand">
+      <input name="attr_handling" placeholder="3" title="@{handling}" type="number" value=""/>
+    </label>
+    <h1 data-i18n="handoff">Hand (Off)</h1><span name="attr_handling_offroad"></span>
+    <label class="settings" data-i18n-title="handoff" title="Hand (Off)">
+      <input name="attr_handling_offroad" placeholder="3" title="@{handling_offroad}" type="number" value=""/>
+    </label>
+    <h1 data-i18n="speed">Speed</h1><span name="attr_speed"></span>
+    <label class="settings" data-i18n-title="speed" title="Speed">
+      <input name="attr_speed" placeholder="3" title="@{speed}" type="number" value=""/>
+    </label>
+    <h1 data-i18n="speedoff">Speed (Off)</h1><span name="attr_speed_offroad"></span>
+    <label class="settings" data-i18n-title="speedoff" title="Speed (Off)">
+      <input name="attr_speed_offroad" placeholder="3" title="@{speed_offroad}" type="number" value=""/>
+    </label>
+    <h1 data-i18n="accel">Accel</h1><span name="attr_acceleration"></span>
+    <label class="settings" data-i18n-title="accel" title="Accel">
+      <input name="attr_acceleration" placeholder="3" title="@{acceleration}" type="number" value=""/>
+    </label>
+    <h1 data-i18n="body">Body</h1><span name="attr_body"></span>
+    <label class="settings" data-i18n-title="body" title="Body">
+      <input name="attr_body" placeholder="3" title="@{body}" type="number" value=""/>
+    </label>
+    <button data-i18n="pilot" name="pilot" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{pilot}}}{{base=^{pilot}}}{{dice=[[((@{pilot}+@{pilot})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">pilot</button><span name="attr_pilot"></span>
+    <label class="settings" data-i18n-title="pilot" title="Pilot">
+      <input name="attr_pilot" placeholder="3" title="@{pilot}" type="number" value=""/>
+    </label>
+    <h1 data-i18n="sensor">Sensor</h1><span name="attr_sensor"></span>
+    <label class="settings" data-i18n-title="sensor" title="Sensor">
+      <input name="attr_sensor" placeholder="3" title="@{sensor}" type="number" value=""/>
+    </label>
+    <h1 data-i18n="seat">Seat</h1><span name="attr_seating"></span>
+    <label class="settings" data-i18n-title="seat" title="Seat">
+      <input name="attr_seating" placeholder="3" title="@{seating}" type="number" value=""/>
+    </label>
+  </div>
+  <div class="sprite attribute">
+    <button data-i18n="level" name="level" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{level}}}{{base=^{level}}}{{dice=[[((@{level}+@{level})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">level</button><span name="attr_level"></span>
+    <label class="settings" data-i18n-title="level" title="Level">
+      <input name="attr_level" placeholder="5" title="@{level}" type="number" value=""/>
+    </label>
+    <button data-i18n="attack" name="attack" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{attack}}}{{base=^{level}}}{{dice=[[((@{level}+@{attack})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">attack</button><span name="attr_attack"></span>
+    <label class="settings" data-i18n-title="attack" title="Attack">
+      <input name="attr_attack" placeholder="5" title="@{attack}" type="number" value=""/>
+    </label>
+    <button data-i18n="sleaze" name="sleaze" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{sleaze}}}{{base=^{level}}}{{dice=[[((@{level}+@{sleaze})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">sleaze</button><span name="attr_sleaze"></span>
+    <label class="settings" data-i18n-title="sleaze" title="Sleaze">
+      <input name="attr_sleaze" placeholder="6" title="@{sleaze}" type="number" value=""/>
+    </label>
+    <button data-i18n="data_processing" name="data_processing" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{data_processing}}}{{base=^{level}}}{{dice=[[((@{level}+@{data_processing})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">data_processing</button><span name="attr_data_processing"></span>
+    <label class="settings" data-i18n-title="data_processing" title="Data Processing">
+      <input name="attr_data_processing" placeholder="7" title="@{data_processing}" type="number" value=""/>
+    </label>
+    <button data-i18n="firewall" name="firewall" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{firewall}}}{{base=^{level}}}{{dice=[[((@{level}+@{firewall})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">firewall</button><span name="attr_firewall"></span>
+    <label class="settings" data-i18n-title="firewall" title="Firewall">
+      <input name="attr_firewall" placeholder="8" title="@{firewall}" type="number" value=""/>
+    </label>
+  </div>
+  <div class="grunt body">
+    <div class="row">
+      <label data-i18n-title="pr" title="Professional Rating">
+        <input name="attr_pr" title="@{pr}" type="number"/>
+      </label>
+    </div>
+  </div>
 </div><div class="footer">
 	<div>
 		<span data-i18n="copyrightfooter">The Topps Company, Inc. has sole ownership of the names, logo, artwork, marks, photographs, sounds, audio, video and/or any proprietary material used in connection with the game Shadowrun. The Topps Company, Inc. has granted permission to use such names, logos, artwork, marks and/or any proprietary materials for promotional and informational purposes on its website but does not endorse, and is not affiliated with any official capacity whatsoever.
