--- a/Delta Green 2/deltagreen.html
+++ b/Delta Green 2/deltagreen.html
@@ -11,7 +11,7 @@
   <label class="switch" data-i18-titlen="whisper rolls to gm" title="whisper rolls to gm">
     <input class="whisper-toggle" name="attr_gm_toggle" type="checkbox" value="/w gm"/><span class="slider"></span>
   </label>
-  <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
+  <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Delta%20Green%202/img/deltagreenlogo.jpg"/>
   <!-- CHARACTER SHEETS--><span data-i18n="Sheet Type">Sheet Type</span>
   <select name="attr_sheet_type">
     <optgroup label="Sheet Type">
