adding logo and testing colors

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -388,100 +388,6 @@
             </div>
             <!-- End Hidden Fields -->
 
-            <!-- Roll Templates -->
-            <rolltemplate class="sheet-rolltemplate-skillCheck">
-    			<div class="container">
-    				<div class="sheet-rolltemplate-skillCheck">
-    					<div class='rollTitle {{season}}'>{{name}}</div>
-    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
-    						{{#rollWasFumble() die1}}
-    							{{#rollWasFumble() die2}}
-    								<div class='fumble'>FUMBLE!!!</div>
-    							{{/rollWasFumble() die2}}
-    						{{/rollWasFumble() die1}}
-    						{{#rollWasCrit() die1}}
-    							{{#rollWasCrit() die2}}
-    								<div class='critical'>CRITICAL SUCCESS!!!</div>
-    							{{/rollWasCrit() die2}}
-    						{{/rollWasCrit() die1}}
-    						{{#rollTotal() die1 6}}
-    							{{#rollTotal() die2 6}}
-    								{{#^rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL SUCCESS!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    								{{#rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL SUCCESS!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/rollWasCrit() die1}}
-    								{{#^rollWasCrit() die1}}
-    									{{#rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL SUCCESS!!!</div>
-    									{{/rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    							{{/rollTotal() die2 6}}
-    						{{/rollTotal() die1 6}}
-    					</div>
-    				</div>
-    			</div>
-            </rolltemplate>
-
-            <rolltemplate class="sheet-rolltemplate-accuracyCheck">
-    			<div class="container">
-    				<div class="sheet-rolltemplate-accuracyCheck">
-    					<div class='rollTitle {{season}}'>{{name}} accuracy check</div>
-    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
-    						{{#rollWasFumble() die1}}
-    							{{#rollWasFumble() die2}}
-    								<div class='fumble'>FUMBLE!!!</div>
-    							{{/rollWasFumble() die2}}
-    						{{/rollWasFumble() die1}}
-    						{{#rollWasCrit() die1}}
-    							{{#rollWasCrit() die2}}
-    								<div class='critical'>CRITICAL HIT!!!</div>
-    							{{/rollWasCrit() die2}}
-    						{{/rollWasCrit() die1}}
-    						{{#rollTotal() die1 6}}
-    							{{#rollTotal() die2 6}}
-    								{{#^rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL HIT!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    								{{#rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL HIT!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/rollWasCrit() die1}}
-    								{{#^rollWasCrit() die1}}
-    									{{#rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL HIT!!!</div>
-    									{{/rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    							{{/rollTotal() die2 6}}
-    						{{/rollTotal() die1 6}}
-    					</div>
-    				</div>
-    			</div>
-            </rolltemplate>
-
-            <rolltemplate class="sheet-rolltemplate-oneDieCheck">
-                <div class="container">
-                    <div class="sheet-rolltemplate-oneDieCheck">
-                        <div class='rollTitle {{season}}'>{{name}}</div>
-                        {{#result}}
-                            <div class='rollResult'>{{result}}</div>
-                        {{/result}}
-                        {{#freetext}}
-                            <div class='rollFreeText'>{{freetext}}</div>
-                        {{/freetext}}
-                    </div>
-                </div>
-            </rolltemplate>
-            <!-- End Roll Templates -->
-
             <!-- High Level Tabs -->
             <input type="radio" class="sheet-tab sheet-tab1" name="attr_core-tab" value="1" title="Details" checked="checked"/>
             <span class="sheet-tab sheet-tab1">Info</span>
@@ -496,42 +402,50 @@
             <!-- End High Level Tabs -->
 
             <span class='characterDetails'>
-                <div class='sheet-3colrow'>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Species</label>
-                        <select name='attr_species'>
-                            <option value='Human'>Human</option>
-                            <option value='Koneko Goblin'>Koneko Goblin</option>
-                        </select>
-                    </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel healthLabel'>Level</label>
-                        <input type='number' name='attr_level' value='1' min='1'/>
-                    </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel healthLabel'>Experience</label>
-                        <input type='number' name='attr_exp' value='0' min='0' style='width:70px'/>
+                <div class='flex'>
+                    <img class="logo" src="https://cf.geekdo-images.com/opengraph/img/a-aup82Fu1aL6ZuzyN-1yWlo3dA=/fit-in/1200x630/pic1949043.png">
+                    <div class='flex-column round-box'>
+                        <div class="flex">
+                            <div class='flex-column'>
+                                <label>Name</label>
+        				        <input name="attr_character_name" placeholder="Character Name" title="@{character_name}" type="text" value="" />
+        				    </div>
+        				    <div class="flex-column">
+                                <label>Species</label>
+                                <select name='attr_species'>
+                                    <option value='Human'>Human</option>
+                                    <option value='Koneko Goblin'>Koneko Goblin</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class='flex'>
+                            <div class='flex-column'>
+                                <label>Level</label>
+                                <input type='number' name='attr_level' value='1' min='1'/>
+                            </div>
+                            <div class='flex-column'>
+                                <label>Experience</label>
+                                <input type='number' name='attr_exp' value='0' min='0' style='width:70px'/>
+                            </div>
+                            <div class='flex-column'>
+                                <label>Age</label>
+                                <input type='number' name='attr_charAge' min='1'/>
+                            </div>
+                            <div class='flex-column'>
+                                <label>Gender</label>
+                                <input type='text' name='attr_charGender'/>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class='sheet-2colrow'>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Age</label>
-                        <input type='number' name='attr_charAge' min='1'/>
-                    </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Gender</label>
-                        <input type='text' name='attr_charGender'/>
-                    </div>
-                </div>
-
-                <div class='sheet-2colrow'>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Personal Item</label>
+                <div class='flex'>
+                    <div class='flex-column'>
+                        <label class="attr-label"> Personal Item </label>
                         <input type='text' name='attr_personalItem'/>
                     </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Party Role</label>
+                    <div class='flex-column'>
+                        <label class="attr-label"> Party Role </label>
                         <select name="attr_role">
                             <option value=''></option>
                             <option value='Journal Keeper'>Journal Keeper</option>
@@ -542,42 +456,45 @@
                     </div>
                 </div>
 
-                <div class='sheet-row'>
-                    <label class='headerLabel infoLabel'>Image Color/Appearance</label>
+                <div class="flex-column">
+                    <label class="attr-label">Image Color/Appearance</label>
                     <textarea name='attr_charAppearance'></textarea>
                 </div>
 
-                <div class='sheet-row'>
-                    <label class='headerLabel infoLabel'>Hometown/Reason for Travel</label>
+                <div class='flex-column'>
+                    <label class="attr-label">Hometown/Reason for Travel</label>
                     <textarea name='attr_charHometown'></textarea>
                 </div>
 
-                <div class='sheet-row'>
-                    <label class='headerLabel infoLabel'>Notes</label>
+                <div class='flex-column'>
+                    <label class="attr-label">Notes</label>
                     <textarea name='attr_charNotes'></textarea>
                 </div>
-                </span>
+                
+            </span>
+
 
                 <span class='characterClass'>
                     <div class='sheet-2olrow'>
                         <label class='headerLabel'>Class</label>
                     </div>
-                    <div class='sheet-2colrow'>
-                        <div class='sheet-col'>
+                    <div class='flex-column'>
                             Class 1:
-                            <select name="attr_class1" class='charoptions'>
-                                <option value=''></option>
-                                <option value='Artisan'>Artisan</option>
-                                <option value='Farmer'>Farmer</option>
-                                <option value='Healer'>Healer</option>
-                                <option value='Hunter'>Hunter</option>
-                                <option value='Merchant'>Merchant</option>
-                                <option value='Minstrel'>Minstrel</option>
-                                <option value='Navigator'>Navigator</option>
-                                <option value='Noble'>Noble</option>
-                                <option value='Other'>Other</option>
-                            </select>
-                            <input type='text' name='attr_class1Other' placeholder='If other, type class name here'/>
+                            <div class="flex">
+                                <select name="attr_class1" class='charoptions select-css'>
+                                    <option value=''></option>
+                                    <option value='Artisan'>Artisan</option>
+                                    <option value='Farmer'>Farmer</option>
+                                    <option value='Healer'>Healer</option>
+                                    <option value='Hunter'>Hunter</option>
+                                    <option value='Merchant'>Merchant</option>
+                                    <option value='Minstrel'>Minstrel</option>
+                                    <option value='Navigator'>Navigator</option>
+                                    <option value='Noble'>Noble</option>
+                                    <option value='Other'>Other</option>
+                                </select>
+                                <input type='text' name='attr_class1Other' placeholder='If other, type class name here'/>
+                            </div>
                         </div>
                         <div class='sheet-col'>
                             Class 2:
@@ -1644,4 +1561,97 @@
         </div>
         <!--- End of NPC sheet-->
     </div>
+     <!-- Roll Templates -->
+            <rolltemplate class="sheet-rolltemplate-skillCheck">
+    			<div class="container">
+    				<div class="sheet-rolltemplate-skillCheck">
+    					<div class='rollTitle {{season}}'>{{name}}</div>
+    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
+    						{{#rollWasFumble() die1}}
+    							{{#rollWasFumble() die2}}
+    								<div class='fumble'>FUMBLE!!!</div>
+    							{{/rollWasFumble() die2}}
+    						{{/rollWasFumble() die1}}
+    						{{#rollWasCrit() die1}}
+    							{{#rollWasCrit() die2}}
+    								<div class='critical'>CRITICAL SUCCESS!!!</div>
+    							{{/rollWasCrit() die2}}
+    						{{/rollWasCrit() die1}}
+    						{{#rollTotal() die1 6}}
+    							{{#rollTotal() die2 6}}
+    								{{#^rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL SUCCESS!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    								{{#rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL SUCCESS!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/rollWasCrit() die1}}
+    								{{#^rollWasCrit() die1}}
+    									{{#rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL SUCCESS!!!</div>
+    									{{/rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    							{{/rollTotal() die2 6}}
+    						{{/rollTotal() die1 6}}
+    					</div>
+    				</div>
+    			</div>
+            </rolltemplate>
+
+            <rolltemplate class="sheet-rolltemplate-accuracyCheck">
+    			<div class="container">
+    				<div class="sheet-rolltemplate-accuracyCheck">
+    					<div class='rollTitle {{season}}'>{{name}} accuracy check</div>
+    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
+    						{{#rollWasFumble() die1}}
+    							{{#rollWasFumble() die2}}
+    								<div class='fumble'>FUMBLE!!!</div>
+    							{{/rollWasFumble() die2}}
+    						{{/rollWasFumble() die1}}
+    						{{#rollWasCrit() die1}}
+    							{{#rollWasCrit() die2}}
+    								<div class='critical'>CRITICAL HIT!!!</div>
+    							{{/rollWasCrit() die2}}
+    						{{/rollWasCrit() die1}}
+    						{{#rollTotal() die1 6}}
+    							{{#rollTotal() die2 6}}
+    								{{#^rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL HIT!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    								{{#rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL HIT!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/rollWasCrit() die1}}
+    								{{#^rollWasCrit() die1}}
+    									{{#rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL HIT!!!</div>
+    									{{/rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    							{{/rollTotal() die2 6}}
+    						{{/rollTotal() die1 6}}
+    					</div>
+    				</div>
+    			</div>
+            </rolltemplate>
+
+            <rolltemplate class="sheet-rolltemplate-oneDieCheck">
+                <div class="container">
+                    <div class="sheet-rolltemplate-oneDieCheck">
+                        <div class='rollTitle {{season}}'>{{name}}</div>
+                        {{#result}}
+                            <div class='rollResult'>{{result}}</div>
+                        {{/result}}
+                        {{#freetext}}
+                            <div class='rollFreeText'>{{freetext}}</div>
+                        {{/freetext}}
+                    </div>
+                </div>
+            </rolltemplate>
+            <!-- End Roll Templates -->
 </html>
