Bugfix:  Initiative adds bonus to target DC
Rolling initiative with the deluxe rules now proper adds Dex+Misc Bonus to target DC rather than as a modifier to the roll.

--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -320,7 +320,7 @@
                                     <br/>Advantage
                                 </div>
     				            <div class="sheet-col-1-6 sheet-small-label sheet-center">
-                                    <button type="roll" name="roll_DeluxeInitiative" value="&{template:5eDefault} {{ability=1}} {{title=Initiative Check}} {{subheader=@{character_name}}} {{check=[[@{initiativeadvantage}-(@{initiative})]]}} {{target=[[@{dexterity}]]}} {{gsresult=[[@{dexterity_gs}]]}} {{tfresult=[[@{dexterity_tf}]]}}"></button>
+                                    <button type="roll" name="roll_DeluxeInitiative" value="&{template:5eDefault} {{ability=1}} {{title=Initiative Check}} {{subheader=@{character_name}}} {{check=[[@{initiativeadvantage}]]}} {{target=[[{@{dexterity}+(@{initiative}), 18}kl1]]}} {{gsresult=[[@{dexterity_gs}]]}} {{tfresult=[[@{dexterity_tf}]]}}"></button>
                                     <div class="sheet-tiny-spacer"></div>Roll
                                 </div>
                             </div>
