--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -252,7 +252,7 @@
 					<div class="sheet-col-1-14 sheet-center">
                         <input class="sheet-hide-it" type="text" name="attr_lucksave_title" value="Luck Check">
                         <input class="sheet-hide-it" type="text" name="attr_lucksave_mod" value="0">
-                        <button type="roll" name="roll_Luck" value="&{template:5eDefault} {{lucksave=1}} {{title=@{lucksave_title}}} {{subheader=@{character_name}}} {{save=[[@{luckadvantage}]]}} {{target=[[{@{luck}+@{lucksave_mod}, 18}kl1]]}}"></button>
+                        <button type="roll" name="roll_Luck" value="&{template:5eDefault} {{lucksave=1}} {{title=@{lucksave_title}}} {{subheader=@{character_name}}} {{save=[[@{luckadvantage}]]}} {{target=[[{[[{@{luck}, ceil(@{level}/2)}kh1]] + @{lucksave_mod}, 18}kl1]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Saves,&nbsp;Exploits</div>
 				</div>
