--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -78,8 +78,8 @@
 					<div class="sheet-col-1-16">
 						<input type="text" name="attr_strength_mod" value="0" readonly/>
 					</div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_strength_gs" min="1" step="1" value="1"/></div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_strength_tf" min="1" step="1" value="20"/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_strength_gs" value="1" readonly/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_strength_tf" value="20" readonly/></div>
                     <div class="sheet-col-1-8">
                         <select name="attr_strengthadvantage">
                             <option value="2d20cs=1cf=20kl1">ADV</option>
@@ -104,8 +104,8 @@
                     <div class="sheet-col-1-16">
 						<input type="text" name="attr_dexterity_mod" value="0" readonly/>
 					</div>
-                    <div class="sheet-col-1-12"><input type="number" name="attr_dexterity_gs" min="1" step="1" value="1"/></div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_dexterity_tf" min="1" step="1" value="20"/></div>
+                    <div class="sheet-col-1-12"><input type="number" name="attr_dexterity_gs" value="1" readonly/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_dexterity_tf" value="20" readonly/></div>
                     <div class="sheet-col-1-8">
                         <select name="attr_dexterityadvantage">
                             <option value="2d20cs=1cf=20kl1">ADV</option>
@@ -125,8 +125,8 @@
 					<div class="sheet-col-1-16">
                         <input type="text" name="attr_constitution_mod" value="0" readonly/>
 					</div>
-                    <div class="sheet-col-1-12"><input type="number" name="attr_constitution_gs" min="1" step="1" value="1"/></div>
-                    <div class="sheet-col-1-12"><input type="number" name="attr_constitution_tf" min="1" step="1" value="20"/></div>
+                    <div class="sheet-col-1-12"><input type="number" name="attr_constitution_gs" value="1" readonly/></div>
+                    <div class="sheet-col-1-12"><input type="number" name="attr_constitution_tf" value="20" readonly/></div>
                     <div class="sheet-col-1-8">
                         <select name="attr_constitutionadvantage">
                             <option value="2d20cs=1cf=20kl1">ADV</option>
@@ -146,8 +146,8 @@
 					<div class="sheet-col-1-16">
 						<input type="text" name="attr_intelligence_mod" value="0" readonly/>
 					</div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_intelligence_gs" min="1" step="1" value="1"/></div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_intelligence_tf" min="1" step="1" value="20"/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_intelligence_gs" value="1" readonly/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_intelligence_tf" value="20" readonly/></div>
                     <div class="sheet-col-1-8">
                         <select name="attr_intelligenceadvantage">
                             <option value="2d20cs=1cf=20kl1">ADV</option>
@@ -167,8 +167,8 @@
 					<div class="sheet-col-1-16">
 						<input type="text" name="attr_perception_mod" value="0" readonly/>
 					</div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_perception_gs" min="1" step="1" value="1"/></div>
-                    <div class="sheet-col-1-12"><input type="number" name="attr_perception_tf" min="1" step="1" value="20"/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_perception_gs" value="1" readonly/></div>
+                    <div class="sheet-col-1-12"><input type="number" name="attr_perception_tf" value="20" readonly/></div>
 				   <div class="sheet-col-1-8">
                         <select name="attr_perceptionadvantage">
                             <option value="2d20cs=1cf=20kl1">ADV</option>
@@ -188,8 +188,8 @@
 					<div class="sheet-col-1-16">
 						<input type="text" name="attr_willpower_mod" value="0" readonly/>
 					</div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_willpower_gs" min="1" step="1" value="1"/></div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_willpower_tf" min="1" step="1" value="20"/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_willpower_gs" value="1" readonly/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_willpower_tf" value="20" readonly/></div>
 				   <div class="sheet-col-1-8">
                         <select name="attr_willpoweradvantage">
                             <option value="2d20cs=1cf=20kl1">ADV</option>
@@ -209,8 +209,8 @@
 					<div class="sheet-col-1-16">
 						<input type="text" name="attr_charisma_mod" value="0" readonly/>
 					</div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_charisma_gs" min="1" step="1" value="1"/></div>
-					<div class="sheet-col-1-12"><input type="number" name="attr_charisma_tf" min="1" step="1" value="20"/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_charisma_gs" value="1" readonly/></div>
+					<div class="sheet-col-1-12"><input type="number" name="attr_charisma_tf" value="20" readonly/></div>
                     <div class="sheet-col-1-8">
                         <select name="attr_charismaadvantage">
                             <option value="2d20cs=1cf=20kl1">ADV</option>
@@ -1438,7 +1438,9 @@
   on(`sheet:opened change:${ability.toLowerCase()}`, () => {
     getAttrs([ability.toLowerCase()], v => {
       const value = parseInt(v[ability.toLowerCase()]) || 10,
-        setting = {};
+		setting = {};
+	  setting[`${ability}_gs`] = Math.floor(value/2);
+	  setting[`${ability}_tf`] = Math.floor(value*1.5);
       if (value <= 4) setting[`${ability}_mod`] = -3;
       else if (value <= 6) setting[`${ability}_mod`] = -2;
       else if (value <= 8) setting[`${ability}_mod`] = -1;
