Feature:  Add XP and XP goal fields
In preparation for the optional XP rules provided in the LFG Companion book, XP and XP goal fields have been added.

--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -10,7 +10,6 @@
                 <p class="sheet-last-updated">Sheet version 3.0<br/>February 2019</p>
                 <input name="attr_version" type="hidden">
             </div>
-            <div class="sheet-col-1-8 sheet-center sheet-margin-top"></div>
             <div class="sheet-col-1-4 sheet-small-label sheet-center">
                 &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
                 <input class="sheet-underlined sheet-center" type="text" name="attr_character_name"><br/>Character Name
@@ -22,8 +21,15 @@
             <div class="sheet-col-1-8 sheet-small-label sheet-center">
                 &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
                 <input class="sheet-underlined sheet-center" type="number" name="attr_level"><br/>Level
-            </div>
-            <div class="sheet-col-1-8 sheet-center sheet-margin-top"></div>
+			</div>
+			<div class="sheet-col-1-8 sheet-small-label sheet-center">
+				&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
+				<input class="sheet-underlined sheet-center" type="number" min="0" step="1" value="0" name="attr_xp"><br/>XP
+			</div>
+            <div class="sheet-col-1-8 sheet-small-label sheet-center">
+				&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
+				<input class="sheet-underlined sheet-center" type="number" min="0" step="1" value="0" name="attr_xp_goal"><br/>XP Goal
+			</div>
         </div>
     </div>
     <h4 class="sheet-center">Personal Details </h4>
