Bugfix:  Level field now has default value of 1
Level field didn't have a default value, and this caused a syntax error with luck saves if a level is never added.

--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -20,7 +20,7 @@
             </div>
             <div class="sheet-col-1-8 sheet-small-label sheet-center">
                 &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-                <input class="sheet-underlined sheet-center" type="number" name="attr_level"><br/>Level
+                <input class="sheet-underlined sheet-center" type="number" min="0" step="1" value="1" name="attr_level"><br/>Level
 			</div>
 			<div class="sheet-col-1-8 sheet-small-label sheet-center">
 				&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
