Bugfix:  Capped "Terrible Failure" score at 20.

--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -1446,7 +1446,7 @@
       const value = parseInt(v[ability.toLowerCase()]) || 10,
 		setting = {};
 	  setting[`${ability}_gs`] = Math.floor(value/2);
-	  setting[`${ability}_tf`] = Math.floor(value*1.5);
+	  setting[`${ability}_tf`] = Math.min(Math.floor(value*1.5) + 1, 20);
       if (value <= 4) setting[`${ability}_mod`] = -3;
       else if (value <= 6) setting[`${ability}_mod`] = -2;
       else if (value <= 8) setting[`${ability}_mod`] = -1;
