--- a/Fallout 4.0/Fallout 4.0.html
+++ b/Fallout 4.0/Fallout 4.0.html
@@ -211,7 +211,7 @@
             <input type="text" class="sheet-text_statsname" value="Detection Rng" readonly />
             <input type="number" class="sheet-number" name="attr_detection_range" value='@{mod_detection_range} + @{base_detection_range}' disabled="true"/>
             <input type="number" class="sheet-number"name="attr_mod_detection_range" value="0" />
-            <input type="number" class="sheet-number" name="attr_base_detection_range" value='(floor((@{perception_mod} + @{perception_base})*2))' disabled="true" />
+            <input type="number" class="sheet-number" name="attr_base_detection_range" value='(floor((@{perception_mod} + @{perception_base})*2)*5)' disabled="true" />
             <input type="text"   class="sheet-number_formula" name="attr_basetext_detection_range" value="(PE x 2) x 5 ft" readonly />
             
         </div>
